# mav_trajectory_generation

mav_trajectory_generation/: CMakeLists.txt  package.xml
mav_trajectory_generation_example/: CMakeLists.txt  package.xml
mav_trajectory_generation_ros/: CMakeLists.txt  package.xml
mav_trajectory_generation_ros/include/mav_trajectory_generation_ros/: feasibility_base.h  ros_conversions.h  ros_visualization.h  trajectory_sampler_node.h
mav_trajectory_generation_ros/launch/: trajectory_sampler.launch.py
mav_trajectory_generation_ros/src/: feasibility_base.cpp  feasibility_sampling.cpp  input_constraints.cpp  ros_conversions.cpp  ros_visualization.cpp  trajectory_sampler_node.cpp
mav_visualization/: CMakeLists.txt  package.xml
mav_visualization/include/mav_visualization/: helpers.h  marker_group.h
mav_visualization/src/: hexacopter_publisher.cpp  marker_group.cpp
